EFK/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: kibana-ingress
spec:
  rules:
    - host: 45-79-62-13.ip.linodeusercontent.com
      http:
        paths:
          - path: /* 
            pathType: Prefix
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 5601
